--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Tabitha Quest</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Crimson+Pro:wght@300;400;500&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
 <style>
   :root {
     --navy:      #0f1524;
@@ -141,13 +141,62 @@
   }
 
   .hero-sub {
-    font-size: 1.05rem;
-    font-weight: 300;
-    line-height: 1.7;
+    font-family: 'Crimson Pro', serif;
+    font-size: 1.15rem;
+    font-weight: 400;
+    line-height: 1.6;
     color: var(--text-light);
-    max-width: 540px;
+    max-width: 580px;
     opacity: 0;
     animation: fadeUp 0.8s 0.9s forwards;
+  }
+
+  /* ── STATS ── */
+  .stats {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 1000px;
+    margin: 90px auto 0;
+  }
+
+  .stat {
+    padding: 52px 32px;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    animation: fadeUp 0.8s forwards;
+  }
+  
+  .stat:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1px;
+    height: 80px;
+    background: rgba(201,168,76,0.25);
+  }
+  
+  .stat:nth-child(1) { animation-delay: 1.1s; }
+  .stat:nth-child(2) { animation-delay: 1.25s; }
+  .stat:nth-child(3) { animation-delay: 1.4s; }
+
+  .stat-number {
+    font-family: 'Playfair Display', serif;
+    font-size: 3.2rem;
+    font-weight: 700;
+    color: var(--gold);
+    line-height: 1;
+    margin-bottom: 18px;
+  }
+
+  .stat-label {
+    font-size: 0.82rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--text-light);
+    letter-spacing: 0.01em;
   }
 
   /* ── PILLARS ── */
@@ -157,7 +206,7 @@
     gap: 1px;
     background: rgba(201,168,76,0.12);
     max-width: 960px;
-    margin: 100px auto 0;
+    margin: 70px auto 0;
     border: 1px solid rgba(201,168,76,0.12);
   }
 
@@ -262,9 +311,27 @@
   @media (max-width: 680px) {
     nav { padding: 20px 24px; }
 
+    .stats {
+      grid-template-columns: 1fr;
+      margin: 60px 24px 0;
+    }
+
+    .stat {
+      padding: 40px 24px;
+    }
+    
+    .stat:not(:last-child)::after {
+      width: 60px;
+      height: 1px;
+      top: auto;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
     .pillars {
       grid-template-columns: 1fr;
-      margin: 70px 24px 0;
+      margin: 50px 24px 0;
     }
 
     .pillar { padding: 44px 32px; }
@@ -278,7 +345,7 @@
 <!-- NAV -->
 <nav>
   <a href="#" class="nav-logo">Tabitha<span>Quest</span></a>
-  <a href="#" class="nav-cta">Get Involved</a>
+  <a href="mailto:info@tabithaquest.org" class="nav-cta">Get Involved</a>
 </nav>
 
 <!-- HERO -->
@@ -291,22 +358,11 @@
   <div class="hero-rule"></div>
 
   <p class="hero-sub">
-    We exist to close the gap between life-saving therapies and the people who need them.
+    We are making new life-saving medicines affordable and accessible for patients.
   </p>
 
   <!-- Three pillars -->
   <div class="pillars">
-
-    <div class="pillar">
-      <div class="pillar-icon">
-        <svg viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="18" cy="18" r="17" stroke="#c9a84c" stroke-width="1.2"/>
-          <path d="M12 18.5l4 4 8-8" stroke="#c9a84c" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-      </div>
-      <h3 class="pillar-title">Access</h3>
-      <p>Removing barriers so that groundbreaking treatments reach every patient, regardless of income.</p>
-    </div>
 
     <div class="pillar">
       <div class="pillar-icon">
@@ -323,12 +379,22 @@
       <div class="pillar-icon">
         <svg viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="18" cy="18" r="17" stroke="#c9a84c" stroke-width="1.2"/>
-          <rect x="11" y="14" width="14" height="10" stroke="#c9a84c" stroke-width="1.4" fill="none"/>
-          <path d="M14 14v-2c0-1.1.9-2 2-2h4c1.1 0 2 .9 2 2v2" stroke="#c9a84c" stroke-width="1.4" stroke-linecap="round"/>
+          <path d="M12 18.5l4 4 8-8" stroke="#c9a84c" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </div>
-      <h3 class="pillar-title">Manufacturing</h3>
-      <p>Driving down the cost of production to make essential medicines accessible at scale.</p>
+      <h3 class="pillar-title">Access</h3>
+      <p>Removing barriers so that groundbreaking treatments reach every patient, regardless of income.</p>
+    </div>
+
+    <div class="pillar">
+      <div class="pillar-icon">
+        <svg viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="18" cy="18" r="17" stroke="#c9a84c" stroke-width="1.2"/>
+          <path d="M13 18h10M18 13v10" stroke="#c9a84c" stroke-width="1.6" stroke-linecap="round"/>
+        </svg>
+      </div>
+      <h3 class="pillar-title">Affordability</h3>
+      <p>Fixing the out-of-control drug cost problem by addressing pricing at every level.</p>
     </div>
 
   </div>
@@ -337,14 +403,30 @@
 <!-- QUOTE -->
 <section class="quote-band">
   <blockquote>
-    We are advancing more affordable, essential medicines—removing barriers to care for patients worldwide.
+    We are creating a structural solution to the market failure of high drug costs.
   </blockquote>
+</section>
+
+<!-- STATS -->
+<section class="stats">
+  <div class="stat">
+    <div class="stat-number">1 in 4</div>
+    <div class="stat-label">Americans struggle to afford medications</div>
+  </div>
+  <div class="stat">
+    <div class="stat-number">2.78×</div>
+    <div class="stat-label">U.S. drug prices vs. other developed nations</div>
+  </div>
+  <div class="stat">
+    <div class="stat-number">30%</div>
+    <div class="stat-label">skip doses or cut pills to make medications last longer</div>
+  </div>
 </section>
 
 <!-- FOOTER -->
 <footer>
   <div class="footer-logo">Tabitha<span>Quest</span></div>
-  <p>© 2026 Tabitha Quest Foundation. All rights reserved.</p>
+  <p>© 2026 Tabitha Quest. All rights reserved.</p>
 </footer>
 
 </body>
