--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         </svg>
       </div>
       <h3 class="pillar-title">Innovation</h3>
-      <p>Investing in next-generation therapies that redefine what's possible in pharmaceutical care.</p>
+      <p>Developing next-generation therapies that redefine what's possible in pharmaceutical care.</p>
     </div>
 
     <div class="pillar">
@@ -383,7 +383,7 @@
         </svg>
       </div>
       <h3 class="pillar-title">Access</h3>
-      <p>Removing barriers so that groundbreaking treatments reach every patient, regardless of income.</p>
+      <p>Removing barriers so that groundbreaking treatments reach every patient.</p>
     </div>
 
     <div class="pillar">
@@ -394,7 +394,7 @@
         </svg>
       </div>
       <h3 class="pillar-title">Affordability</h3>
-      <p>Fixing the out-of-control drug cost problem by addressing pricing at every level.</p>
+      <p>Fixing the out-of-control drug cost problem by addressing costs at every level.</p>
     </div>
 
   </div>
