--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   .hero-sub {
     font-family: 'Crimson Pro', serif;
-    font-size: 1.35rem;
+    font-size: 2.35rem;
     font-weight: 400;
     line-height: 1.6;
     color: var(--text-light);
@@ -394,7 +394,7 @@
         </svg>
       </div>
       <h3 class="pillar-title">Affordability</h3>
-      <p>Fixing the out-of-control drug cost problem by addressing costs at every level.</p>
+      <p>Fixing the out-of-control drug pricing problem by addressing costs at every level.</p>
     </div>
 
   </div>
