--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
   <div class="hero-rule"></div>
 
   <p class="hero-sub">
-    We are making new life-saving medicines affordable and accessible for patients.
+    At Tabitha Quest, we are making new life-saving medicines affordable and accessible for patients.
   </p>
 
   <!-- Three pillars -->
